--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,3 @@
-altair==5.5.0
-altgraph==0.17.4
-attrs==25.1.0
-audioop-lts==0.2.1
-blinker==1.9.0
-cachetools==5.5.2
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-comtypes==1.4.9
-gitdb==4.0.12
-GitPython==3.1.44
-idna==3.10
-Jinja2==3.1.5
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-narwhals==1.28.0
-numpy==2.2.3
-packaging==24.2
-pandas==2.2.3
-pefile==2023.2.7
-pillow==11.1.0
-protobuf==5.29.3
-pyarrow==19.0.1
-PyAudio==0.2.14
-pydeck==0.9.1
-Pygments==2.19.1
-pyinstaller==6.11.1
-pyinstaller-hooks-contrib==2024.11
-pypiwin32==223
-python-dateutil==2.9.0.post0
-pyttsx3==2.98
-pytz==2025.1
-pywin32==308
-pywin32-ctypes==0.2.3
-referencing==0.36.2
-requests==2.32.3
-rich==13.9.4
-rpds-py==0.23.1
-setuptools==75.8.0
-six==1.17.0
-smmap==5.0.2
-SpeechRecognition==3.14.1
-standard-aifc==3.13.0
-standard-chunk==3.13.0
-streamlit==1.42.2
-tenacity==9.0.0
-toml==0.10.2
-tornado==6.4.2
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==2.3.0
-watchdog==6.0.0
+streamlit
+pandas
+numpy
